Added Exception handling and notifies user of errors